# scenelab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  devlog.md
.github/workflows/: docker-build.yml
assets/shaders/: bbox.frag  deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  ibl_brdf.frag  ibl_irradiance.frag  ibl_prefilter.frag  lighting.frag  lighting_gouraud.frag  lighting_gouraud.vert  normalShader.frag  pathtracing.frag  pbr.frag  pbr.vert  shader.vert  shader_vect.vert  skybox.frag  vect.frag
include/: App.hpp  Camera.hpp  CameraController.hpp  CameraManager.hpp  DynamicGeometryManager.hpp  GameObject.hpp  GeometryGenerator.hpp  GeometryImguiWindow.hpp  GeometryManager.hpp  Image.hpp  ImageIO.hpp  RenderableObject.h++  RenderableObject.hpp  SceneGraph.hpp  ShaderProgram.hpp  TextureManager.hpp  TransformManager.hpp  Vectoriel.hpp  utils.hpp
include/deferred/: DeferredRenderer.hpp
include/illumination/: Illumination.hpp
include/objects/: AnalyticalPlane.hpp  AnalyticalSphere.hpp  DynamicLine.hpp  Light.h++  Light.hpp  Material.hpp  Object2D.h++  Object2D.hpp  Object3D.h++  Object3D.hpp
include/pbr/: IBLManager.hpp
include/renderer/: BVH.hpp  TextureLibrary.hpp
include/renderer/implementation/: PathTracingRenderer.hpp  RasterizationRenderer.hpp
include/renderer/interface/: ARenderer.hpp  IRenderer.hpp
include/shapes/: ParametricCurve.hpp  Triangulation.hpp
src/: App.cpp  CameraController.cpp  CameraManager.cpp  DynamicGeometryManager.cpp  GameObject.cpp  GeometryGenerator.cpp  GeometryImguiWindow.cpp  GeometryManager.cpp  Image.cpp  ImageIO.cpp  OBJLoader.cpp  ParametricCurve.cpp  ParametricCurveManager.cpp  SceneGraph.cpp  TextureManager.cpp  TransformManager.cpp  Vectoriel.cpp  main.cpp  utils.cpp
src/Vectoriel/: Base.cpp  Primitives.cpp  Shapes.cpp  UI.cpp
src/deferred/: DeferredRenderer.cpp
src/illumination/: UI.cpp
src/objects/: AnalyticalPlane.cpp  AnalyticalSphere.cpp  Curve.cpp  DynamicLine.cpp  Light.cpp  Object2D.cpp  Object3D.cpp
src/pbr/: IBLManager.cpp
src/renderer/: ARenderer.cpp  BVH.cpp  PathTracingRenderer.cpp  RasterizationRenderer.cpp  TextureLibrary.cpp
src/shapes/: ParametricCurve.cpp  Triangulation.cpp
